--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           if [[ -n $(git status -s) ]]; then
           git add .
-          git commit -m "Update BEAUTY.png"
+          git commit -m "Update"
           git push origin master --force
           else
           echo "No Change, Bye bye!"
