--- a/src/Cpp_Practise/Practise/Practise.vcxproj
+++ b/src/Cpp_Practise/Practise/Practise.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{42cf2c48-4470-49be-b310-3cc0828bfe21}</ProjectGuid>
-    <RootNamespace>CppPractise</RootNamespace>
+    <ProjectGuid>{1484566b-3b75-42df-a5f7-ea3c014d3adb}</ProjectGuid>
+    <RootNamespace>Practise</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Level1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="1.1.cpp" />
+    <ClCompile Include="for.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
