--- a/src/Cpp_Practise/Level3/Level3.vcxproj.filters
+++ b/src/Cpp_Practise/Level3/Level3.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="3.1.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
