--- a/src/Cpp_Practise/Practise/Practise.vcxproj
+++ b/src/Cpp_Practise/Practise/Practise.vcxproj
@@ -127,7 +127,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="for.cpp" />
+    <ClCompile Include="for1.1.cpp" />
+    <ClCompile Include="for1.2.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
