--- a/src/Cpp_Practise/Practise/Practise.vcxproj.filters
+++ b/src/Cpp_Practise/Practise/Practise.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="array1.1.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
