--- a/.github/workflows/profile.yml
+++ b/.github/workflows/profile.yml
@@ -1,23 +1,34 @@
-name: Photo Upgrader
-on:
-  schedule: [{ cron: 45 * * * * }]
-  workflow_dispatch:
+name: Profile
 
+on:
+  schedule: [{ cron: 0 * * * * }]
 
 jobs:
-  Photo:
+  metrics:
+    runs-on: ubuntu-latest
+    steps:
+      - name: metrics
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.classic.svg
+          committer_token: ${{ secrets.COOLPLAYLIN_BOT_TOKEN }}
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: header, repositories
+          plugin_lines: yes
+  snk:
+    needs: [metrics]
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.METRICS_TOKEN }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3.5.3
-        with:
-          token: ${{ secrets.COOLPLAYLIN_BOT_TOKEN }}
       - name: Setup Information
         run: |
           git config --global user.email 130831920+coolplaylinbot@users.noreply.github.com
           git config --global user.name coolplaylinbot
+      - name: Checkout
+        uses: actions/checkout@v3.5.3
+        with:
+          token: ${{ secrets.COOLPLAYLIN_BOT_TOKEN }}
       - name: Update SNK
         uses: Platane/snk@v3
         with:
@@ -42,7 +53,7 @@ jobs:
         run: |
           if [[ -n $(git status -s) ]]; then
           git add .
-          git commit -m "Update photo.png"
+          git commit -m "Update SNK"
           git push origin master --force
           else
           echo "No Change, Bye bye!"
