--- a/src/Vue_Practise/package.json
+++ b/src/Vue_Practise/package.json
@@ -16,6 +16,7 @@
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/test-utils": "^2.4.1",
     "jsdom": "^22.1.0",
+    "typescript": "^5.1.6",
     "vite": "^4.4.6",
     "vitest": "^0.33.0"
   }
