--- a/src/Vue_Practise/package.json
+++ b/src/Vue_Practise/package.json
@@ -6,16 +6,20 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test:unit": "vitest"
+    "test:unit": "vitest",
+    "serve": "live-server"
   },
   "dependencies": {
+    "@octokit/rest": "^20.0.1",
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/test-utils": "^2.4.1",
     "jsdom": "^22.1.0",
+    "live-server": "^1.2.2",
     "typescript": "^5.1.6",
     "vite": "^4.4.6",
     "vitest": "^0.34.0"
