--- a/src/Vue_Practise/package.json
+++ b/src/Vue_Practise/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@octokit/rest": "^20.0.1",
+    "ant-design-vue": "^4.0.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
@@ -21,7 +22,7 @@
     "jsdom": "^22.1.0",
     "live-server": "^1.2.2",
     "typescript": "^5.1.6",
-    "vite": "^4.4.6",
-    "vitest": "^0.34.0"
+    "vite": "^4.4.9",
+    "vitest": "^0.34.1"
   }
 }
